[feat]: [DBOPS-1827]: Add UT for mongo native executor changes (#3)
* c47b82 improve tests

* 63535a selective import

* c4d067 [feat]: [DBOPS-1827]: Add UT for mongo native executor changes